# civiewer

./: .gitignore  Cargo.toml  PKGBUILD  README.md  ThirdPartyNotices.txt  build.sh
.github/workflows/: release.yml
assets/: civiewer.desktop  com.arianpg.civiewer.desktop
src/: app.rs  database.rs  i18n.rs  icon.rs  input_settings.rs  main.rs  utils.rs
src/components/: image_view.rs  mod.rs  settings_dialog.rs  sidebar.rs
