[package]
name = "civiewer"
version = "0.1.0"
edition = "2021"

[dependencies]
relm4 = "0.9"
gtk4 = "0.9"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp"] }
polodb_core = "4.0"
serde = { version = "1.0", features = ["derive"] }
natord = "1.0"
zip = "2.1"
anyhow = "1.0"
once_cell = "1.19"
dirs = "6.0.0"
tempfile = "3.10"

[build-dependencies]
glib-build-tools = "0.21.0"
