[package]
name = "civiewer"
version = "0.1.0"
edition = "2021"
description = "A fast and minimal comic image viewer."
license = "MIT"
repository = "https://github.com/arianpg/civiewer"

[dependencies]
relm4 = "0.9"
gtk4 = "0.9"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp"] }
polodb_core = "4.0"
serde = { version = "1.0", features = ["derive"] }
natord = "1.0"
zip = { version = "2.1", default-features = false, features = ["deflate", "time", "aes-crypto", "bzip2"] }
anyhow = "1.0"
once_cell = "1.19"
dirs = "6.0.0"
tempfile = "3.10"

[build-dependencies]
glib-build-tools = "0.21.0"

[package.metadata.deb]
name = "civiewer"
maintainer = "arianpg"
copyright = "2026, arianpg"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "graphics"
priority = "optional"
assets = [
    ["target/release/civiewer", "usr/bin/", "755"],
    ["assets/civiewer.desktop", "usr/share/applications/", "644"],
    ["assets/hicolor/scalable/apps/com.arianpg.civiewer.svg", "usr/share/icons/hicolor/scalable/apps/com.arianpg.civiewer.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/civiewer", dest = "/usr/bin/civiewer", mode = "755" },
    { source = "assets/civiewer.desktop", dest = "/usr/share/applications/civiewer.desktop", mode = "644" },
    { source = "assets/hicolor/scalable/apps/com.arianpg.civiewer.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.arianpg.civiewer.svg", mode = "644" },
]
